--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,15 +7,25 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="5dp">
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_centerInParent="true"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
+
+            <ImageView
+                android:id="@+id/profile_pic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dip"
+
+                android:gravity="center"
+                 />
 
 
             <!--heading-->
@@ -24,6 +34,15 @@
                 android:layout_height="wrap_content"
                 android:text="@string/profile"
                 android:textSize="25dp" />
+            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:stretchColumns="*"
+                android:shrinkColumns="1"
+                android:id="@+id/profile_table">
+                <TableRow>
 
                     <TextView
                         android:text="@string/profile_name"
@@ -32,7 +51,8 @@
                         android:padding="10dp"
                         android:textColor="@color/lbl_name"
                         android:textSize="18sp"
-                        android:layout_gravity="left" />
+                        android:layout_gravity="left"
+                        android:layout_marginTop="-10dp"/>
 
                     <!-- name-->
                     <TextView
@@ -40,10 +60,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:textColor="@color/lbl_name"
-                        android:textSize="18sp"
-                        android:layout_gravity="left" />
-
+                        android:textColor="@color/input_login_hint"
+                        android:textSize="16sp"
+                        android:layout_gravity="right"
+                        android:layout_marginTop="-10dp"/>
+                </TableRow>
+                <TableRow>
                     <TextView
                         android:text="@string/profile_id"
                         android:layout_width="wrap_content"
@@ -51,17 +73,21 @@
                         android:padding="10dp"
                         android:textColor="@color/lbl_name"
                         android:textSize="18sp"
-                        android:layout_gravity="left" />
+                        android:layout_gravity="left"
+                        android:layout_marginTop="-10dp"/>
+
 
                     <TextView
                         android:id="@+id/patient_id"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:textColor="@color/lbl_name"
-                        android:textSize="18sp"
-                        android:layout_gravity="left"/>
-
+                        android:textColor="@color/input_login_hint"
+                        android:textSize="16sp"
+                        android:layout_gravity="right"
+                        android:layout_marginTop="-10dp"/>
+                </TableRow>
+                <TableRow>
                 <!-- dob heading-->
 
                     <TextView
@@ -71,19 +97,21 @@
                         android:padding="10dp"
                         android:textColor="@color/lbl_name"
                         android:textSize="18sp"
-                        android:layout_gravity="left" />
+                        android:layout_gravity="left"
+                        android:layout_marginTop="-10dp"/>
                     <TextView
                         android:id="@+id/patient_dob"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:textColor="@color/lbl_name"
-                        android:textSize="18sp"
-                        android:layout_gravity="left"/>
+                        android:textColor="@color/input_login_hint"
+                        android:textSize="16sp"
+                        android:layout_gravity="right"
+                        android:layout_marginTop="-10dp"/>
 
-
+                </TableRow>
                 <!-- allergies-->
-
+                <TableRow>
                     <TextView
                         android:text="@string/profile_allergies_true"
                         android:layout_width="wrap_content"
@@ -91,18 +119,20 @@
                         android:padding="10dp"
                         android:textColor="@color/lbl_name"
                         android:textSize="18sp"
-                        android:layout_gravity="left" />
+                        android:layout_gravity="left"
+                        android:layout_marginTop="-10dp"/>
                     <TextView
                         android:id="@+id/patient_allergies"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:textColor="@color/lbl_name"
-                        android:textSize="18sp"
-                        android:layout_gravity="left"/>
-
+                        android:textColor="@color/input_login_hint"
+                        android:textSize="16sp"
+                        android:layout_gravity="right"
+                        android:layout_marginTop="-10dp"/>
+                </TableRow>
                 <!-- access type -->
-
+                <TableRow>
                     <TextView
                         android:text="@string/profile_access_type"
                         android:layout_width="wrap_content"
@@ -110,16 +140,19 @@
                         android:padding="10dp"
                         android:textColor="@color/lbl_name"
                         android:textSize="18sp"
-                        android:layout_gravity="left" />
+                        android:layout_gravity="left"
+                        android:layout_marginTop="-10dp"/>
                     <TextView
                         android:id="@+id/patient_access_type"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:textColor="@color/lbl_name"
-                        android:textSize="18sp"
-                        android:layout_gravity="left"/>
-
+                        android:textColor="@color/input_login_hint"
+                        android:textSize="16sp"
+                        android:layout_gravity="right"
+                        android:layout_marginTop="-10dp"/>
+                </TableRow>
+          </TableLayout>
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
