--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -9,49 +9,15 @@
     android:layout_height="fill_parent"
     >
 
-    <Spinner android:id="@+id/spinner_calendar"
-        android:layout_height="wrap_content"
-        android:layout_width="fill_parent"
-        android:textColor="@color/lbl_name"
-        />
 
-    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:shrinkColumns="1"
-        android:stretchColumns="*"
-        android:id="@+id/contacts_consultant_table">
-    <TableRow>
-    <Button android:id="@+id/button_add"
-        android:layout_height="wrap_content"
-        android:layout_width="150px"
-        android:text="Add Event"
-        android:layout_gravity="center"
-        android:gravity="center"
-        />
-    <Button android:id="@+id/button_add2"
-        android:layout_height="wrap_content"
-        android:layout_width="150px"
-        android:text="Add Event 2"
-        android:layout_gravity="center"
-        android:gravity="center"
-        />
-    <Button android:id="@+id/button_get_events"
-        android:layout_height="wrap_content"
-        android:layout_width="150px"
-        android:text="Get Events"
-        android:layout_gravity="center"
-        android:gravity="center"
-        />
-    </TableRow>
-    </TableLayout>
+
+
 
     <LinearLayout
         android:id="@+id/buttonlayout"
         android:layout_width="fill_parent"
         android:layout_height="60sp"
-        android:background="@drawable/topbar"
+        android:background="@color/sky"
         android:gravity="left|top"
         android:height="60sp"
         android:orientation="horizontal" >
@@ -60,7 +26,7 @@
             android:id="@+id/settings"
             android:layout_width="54sp"
             android:layout_height="60sp"
-            android:background="@drawable/meenu" />
+            android:background="@color/sky" />
 
         <ImageView
             android:id="@+id/prevMonth"
@@ -94,7 +60,11 @@
             android:id="@+id/addEvent"
             android:layout_width="54sp"
             android:layout_height="60sp"
-            android:background="@drawable/plus" />
+            android:background="@color/sky"
+            android:text = "+"
+            android:textSize = "25sp"
+            android:textColor="@color/input_login_hint"
+            />
     </LinearLayout>
 
     <Button
@@ -112,24 +82,96 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center" >
 
-        <ImageView
-            android:id="@+id/calendarheader"
-            android:layout_width="fill_parent"
+        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/calendar_days" >
-        </ImageView>
-    </LinearLayout>
+            android:layout_marginTop="0dp"
+            android:shrinkColumns="1"
+            android:stretchColumns="*"
 
+            android:id="@+id/calendar_weekdays">
+            <TableRow>
+                <TextView
+                    android:id="@+id/calendar_weekdays_sun"
+                    android:text="Sun"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="0dp"
+                    android:textColor="@color/lbl_name"
+                    android:textSize="12sp"
+                    android:gravity="center"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:id="@+id/calendar_weekdays_mon"
+                    android:text="Mon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="0dp"
+                    android:textColor="@color/lbl_name"
+                    android:textSize="12sp"
+                    android:gravity="center"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:id="@+id/calendar_weekdays_tue"
+                    android:text="Tue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="0dp"
+                    android:gravity="center"
+                    android:textColor="@color/lbl_name"
+                    android:textSize="12sp"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:id="@+id/calendar_weekdays_wed"
+                    android:text="Wed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="0dp"
+                    android:textColor="@color/lbl_name"
+                    android:gravity="center"
+                    android:textSize="12sp"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:id="@+id/calendar_weekdays_thu"
+                    android:text="Thu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="0dp"
+                    android:textColor="@color/lbl_name"
+                    android:gravity="center"
+                    android:textSize="12sp"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:id="@+id/calendar_weekdays_fri"
+                    android:text="Fri"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="0dp"
+                    android:textColor="@color/lbl_name"
+                    android:gravity="center"
+                    android:textSize="12sp"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:id="@+id/calendar_weekdays_sat"
+                    android:text="Sat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="0dp"
+                    android:textColor="@color/lbl_name"
+                    android:gravity="center"
+                    android:textSize="12sp"
+                    android:layout_gravity="center"/>
+            </TableRow>
+
+
+        </TableLayout>
+    </LinearLayout>
     <GridView
         android:id="@+id/calendar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:numColumns="7" >
     </GridView>
 
 </LinearLayout>
-
-
-
-
