small fix in events page to allow column shrinking and stretching

--- a/app/src/main/res/layout/activity_calendar_events_view.xml
+++ b/app/src/main/res/layout/activity_calendar_events_view.xml
@@ -33,7 +33,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:shrinkColumns="1"
+        android:shrinkColumns="*"
         android:stretchColumns="*"
         android:id="@+id/calendar_events_main_table">
 
@@ -44,7 +44,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:shrinkColumns="1"
+        android:shrinkColumns="*"
         android:stretchColumns="*"
         android:id="@+id/calendar_events_buttons">
       <TableRow>
