--- a/app/src/main/res/layout/activity_change_event.xml
+++ b/app/src/main/res/layout/activity_change_event.xml
@@ -19,8 +19,8 @@
             android:orientation="vertical">
 
             <TextView
-                android:text="Add new event"
-                android:id="@+id/create_event_heading"
+                android:text="Update event"
+                android:id="@+id/change_event_heading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
@@ -29,7 +29,7 @@
                 android:textSize="20sp" />
 
             <EditText
-                android:id="@+id/create_event_name"
+                android:id="@+id/change_event_name"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -42,7 +42,7 @@
                 android:textColorHint="@color/input_login_hint" />
 
             <EditText
-                android:id="@+id/create_event_description"
+                android:id="@+id/change_event_description"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -54,7 +54,7 @@
                 android:textColor="@color/input_login"
                 android:textColorHint="@color/input_login_hint" />
             <TextView
-                android:id="@+id/create_event_date"
+                android:id="@+id/change_event_date"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -65,7 +65,7 @@
                 android:textColor="@color/input_login"
                 android:textColorHint="@color/input_login_hint" />
             <TextView
-                android:id="@+id/create_event_starttime"
+                android:id="@+id/change_event_starttime"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -76,7 +76,7 @@
                 android:textColor="@color/input_login"
                 android:textColorHint="@color/input_login_hint" />
             <TextView
-                android:id="@+id/create_event_endtime"
+                android:id="@+id/change_event_endtime"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -95,12 +95,12 @@
                 android:layout_marginRight="10dp"
                 android:shrinkColumns="1"
                 android:stretchColumns="*"
-                android:id="@+id/create_event_buttons">
+                android:id="@+id/change_event_buttons">
                 <TableRow>
-                    <Button android:id="@+id/button_add_event"
+                    <Button android:id="@+id/button_change_event"
                         android:layout_height="wrap_content"
                         android:layout_width="150px"
-                        android:text="Add new event"
+                        android:text="Update event"
                         android:layout_gravity="center"
                         android:gravity="center"
                         />
